WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61105
[chromium] Fix incorrect size when clipping image layer upload rects
https://bugs.webkit.org/show_bug.cgi?id=61105
Summary
[chromium] Fix incorrect size when clipping image layer upload rects
Adrienne Walker
Reported
2011-05-18 19:24:10 PDT
[chromium] Fix incorrect size when clipping image layer upload rects
Attachments
Patch
(1.52 KB, patch)
2011-05-18 19:27 PDT
,
Adrienne Walker
jamesr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2011-05-18 19:27:21 PDT
Created
attachment 94033
[details]
Patch
Adrienne Walker
Comment 2
2011-05-18 19:29:06 PDT
This typo was causing this crash (on Windows), but a memcpy overrun on all platforms:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&group=%40ToT%20GPU%20Mesa%20-%20chromium.org&tests=compositing%2Fcolor-matching%2Fimage-color-matching.html%2Ccompositing%2Fanimation%2Fbusy-indicator.html
James Robinson
Comment 3
2011-05-18 19:32:57 PDT
Comment on
attachment 94033
[details]
Patch R=me
Adrienne Walker
Comment 4
2011-05-18 19:41:40 PDT
Committed
r86815
: <
http://trac.webkit.org/changeset/86815
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug