2011-05-18  Adrienne Walker  <enne@google.com>

Reviewed by James Robinson.

        [chromium] Fix incorrect size when clipping image layer upload rects
        https://bugs.webkit.org/show_bug.cgi?id=61105

        The clipped destination and source rects should have the same size.

        * platform/graphics/chromium/ImageLayerChromium.cpp:
        (WebCore::ImageLayerTextureUpdater::updateTextureRect):

Canonical link: https://commits.webkit.org/76457@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86815 268f45cc-cd09-0410-ab3c-d52691b4dbfc